tdf#104540: AccessibleEventNotifier AccessibleBase (editeng)

See https://bugs.documentfoundation.org/attachment.cgi?id=129537 for bt
For the remind, it follows a replace of OSL_ENSURE by an assert, see:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=8228227168a7eb3ebf14629bec87f01536c23970

Change-Id: Id05eeb6e6669232e9b5cc2ef2989827fef3025d0
Reviewed-on: https://gerrit.libreoffice.org/31918
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Julien Nabet <serval2412@yahoo.fr>